src/test/contracts/negative/pattern_matching_anomalies/missing_cases/last.mligo
let rec last (xs : int list) : int = 
  match xs with
    x::[] -> x
  | _::xs -> last xs